@@ -1,5 +1,14 @@
 2007-08-01  Diego Escalante Urrelo  <diegoe@gnome.org>
 
+	* src/ephy-completion-model.c:
+	* embed/ephy-history.c:
+
+	Fix completion model to show icons for history items too,
+	istory/bookmarks/favicon_cache service objects are now stored in the
+	completion priv. Patch by Imran Patel. Fixes bug #459811.
+
+2007-08-01  Diego Escalante Urrelo  <diegoe@gnome.org>
+
 	* data/epiphany-lockdown.schemas.in:
 
 	Remove misleading text from hide menu bar lockdown. Fixes bug #321989.
